# Farga

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
docs/: org.md
docs/projects/occitan/: project.md
docs/projects/occitan/amassada/: component.md
docs/projects/occitan/caissa/: component.md
docs/projects/occitan/charradissa/: component.md
docs/projects/occitan/cor/: component.md
docs/projects/occitan/farga/: component.md
docs/projects/occitan/fondament/: component.md
docs/projects/occitan/gardian/: component.md
docs/superpowers/plans/: 2026-06-12-farga-implementation.md  2026-06-18-librarian.md
docs/superpowers/specs/: 2026-06-12-farga-design.md
farga-cli/: Cargo.toml
farga-cli/src/: main.rs
farga-cli/src/commands/: artifacts.rs  context.rs  mod.rs  proposals.rs  signals.rs
farga-core/: Cargo.toml
farga-core/src/: error.rs  lib.rs  reader.rs  types.rs  writer.rs
farga-core/tests/: traits_tests.rs  types_tests.rs
farga-server/: Cargo.toml
farga-server/src/: db.rs  docs.rs  lib.rs  librarian.rs  main.rs  optimizer.rs  state.rs
farga-server/src/routes/: artifacts.rs  audit.rs  context.rs  governance.rs  kv.rs  mcp.rs  mod.rs  signals.rs
farga-server/tests/: audit_route_tests.rs  context_route_tests.rs  db_tests.rs  governance_route_tests.rs  kv_tests.rs  mcp_route_tests.rs
migrations/: 001_initial_schema.sql  002_add_indexes.sql  003_governance.sql  004_kv_expires.sql  005_context_nodes.sql
