[package]
name = "farga-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
farga-core = { path = "../farga-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
